--- a/about_blocky.html
+++ b/about_blocky.html
@@ -12,13 +12,13 @@
 
 <!--GAME WINDOW-->
 <div class="about">
-	<h3 id="desc" style="left:45%; position: absolute; top:20%;"></h3>
+	<h3 id="desc" style="left:45%; position: absolute; top:20%; font-size: 27px;"></h3>
 	<a href="game.html" class="button" style="position: absolute; right:20%; top:90%;">Start Game</a>
 </div>
 
 <!--JAVASCRIPT CODE PART-->
 <script>
-var Words="Blocky needs your help! He is trying to defend his homeland. But, the MeanBots are preventing him from doing so. With your help, Blocky can defeat the MeanBots and protect his homeland. Press the 'L' button on the keyboard to launch a ball at any blue MeanBot, press Space to jump, but don't get hit!"
+var Words="Blocky needs your help! He is trying to defend his homeland. But, the MeanBots are preventing him from doing so. With your help, Blocky can defeat the MeanBots and protect his homeland. Press the 'L' button on the keyboard to launch a ball at any blue MeanBot, press Space to jump, press b to block a MeanBot's throw, but don't get hit!"
 var i = 0;
 //A FUNCTION TO TYPE ALL THE WORDS
 function typeWords(){
