--- a/works.html
+++ b/works.html
@@ -51,7 +51,7 @@ function viewPeiceTwo(){
 }
 
 function viewPeiceThree(){
-	location.replace("view_shop_site.html");
+	location.replace("ar/test.html");
 }
 </script>
 
