2020 Update To Site
Update

--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
 
 <div class="portfolioOne" onClick="viewPeiceOne()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice One:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 27%; top: 15%;">Portfolio</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 27%; top: 15%;">Portfolio Website</h3>
 </div>
 
 <div class="portfolioTwo" onClick="viewPeiceTwo()">
@@ -25,7 +25,7 @@
 
 <div class="portfolioThree" onClick="viewPeiceThree()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice Three:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Clothing Site(2016)</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Artworks and Drawings</h3>
 </div>
 
 <script>
@@ -51,7 +51,7 @@ function viewPeiceTwo(){
 }
 
 function viewPeiceThree(){
-	location.replace("ar/test.html");
+	location.replace("show_art.html");
 }
 </script>
 
