--- a/works.html
+++ b/works.html
@@ -25,8 +25,9 @@
 
 <div class="portfolioThree" onClick="viewPeiceThree()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice Three:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Artworks and Drawings</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Artworks and Drawings for WISE</h3>
 </div>
+
 
 <script>
 var LogoWords="Works";
