--- a/show_art.html
+++ b/show_art.html
@@ -168,7 +168,7 @@ img {vertical-align: middle;}
   <div class="mySlides fade">
     <div class="numbertext">9 / 14</div>
     <img src="portfolio/digital_art3.png" style="width:100%">
-    <div class="text">A drawing of a cartoon looking peach fruit.</div>
+    <div class="text">A quick sketch of the profile view of a girl.</div>
   </div>
 
   <div class="mySlides fade">
