--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <body>
 
 <video width="800" height="600" controls>
-  <source src="demo.mp4" type="video/mp4">
+  <source src="demo2.mp4" type="video/mp4">
   <source src="" type="video/ogg">
   Your browser does not support the video tag.
 </video>
