--- a/video.html
+++ b/video.html
@@ -2,11 +2,11 @@
 <html>
 <body>
 
-<video width="800" height="600" controls>
+<!--<video width="800" height="600" controls>
   <source src="caps_demo.mp4" type="video/mp4">
   <source src="" type="video/ogg">
   Your browser does not support the video tag.
-</video>
+</video>-->
 
 </body>
 </html>
