update to style

--- a/index_o.html
+++ b/index_o.html
@@ -1,9 +1,10 @@
 <!--ANGELLICA'S WEBSITE-->
-<!--CODE  WRITTEN BY ANGELLICA B. 2020-->
-<!DOCTYPE HTML> 
+<!--CODE  WRITTEN BY ANGELLICA B. 2019-->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+"http://www.w3.org/TR/html4/strict.dtd"> 
 <html>
 <head>
-	<title>AngelliCode - Angellica's 'Portfolio</title>
+	<title>AngelliCode - Angellica Brown's Portfolio</title>
 	<link rel="stylesheet" href="style.css"/>
 	<link rel="icon" href="/favicon.png">
 </head>
@@ -16,6 +17,8 @@
 	<div class="loadingDot3">A</div>
 	<div class="loadingDot4">D</div>
 </div>
+-->
+
 <div class="bgGreen">
 <div class="titleScreen">
 	<h1 id="logo" style="float:left; position: relative;z-index: 1; font-size:102px;"></h1>
@@ -23,9 +26,10 @@
 </div>
 <h2 id="logodesc" style="top:70%;position:absolute;font-size:25px;"></h2>
 </div>
--->
 
-<!--<script>
+
+
+<script>
 var LogoWords="AngelliCode";
 var DescWords="Angellica's Programming Portfolio"
 var i = 0;
@@ -39,19 +43,14 @@ if (i < DescWords.length ){
 }
 
 window.typeWords();
-</script>-->
+</script>
 
-
-
-<div class="titleScreen">
-	<img src="ANGELLICA + CODE.png" style="display: block; margin-left: auto; margin-right: auto;"/>
-</div>
 
 
 <div class="menu">
-<a href="index.html" style=" padding-left: 10%; padding-right: 30%; text-decoration: none;">Skills</a>
-<a href="index.html" style=" padding-left: 0.5%; padding-right: 26.8%; text-decoration: none;">Projects</a>
-<a href="index.html" style="padding-left: 0.5%; padding-right: 10%; text-decoration: none;">Contact</a>
+<a href="index.html" style="position: absolute; margin:auto;background-color: #4CAF50;text-decoration:none;">HOME</a>
+<a href="works.html" style="position: absolute; left: 7%; background-color: #4CAF50;text-decoration: none;">WORKS</a>
+<a href="about.html" style="position: absolute; left: 15.6%;background-color: #4CAF50;text-decoration: none;">ABOUT</a>
 </div>
 
 
