--- a/index.html
+++ b/index.html
@@ -54,6 +54,41 @@ window.typeWords();
 <a href="index.html" style="padding-left: 0.5%; padding-right: 10%; text-decoration: none;">Contact</a>
 </div>
 
+<br>
+
+<div id="intro">
+	<img src="laptop.png" style="float: right;"/>
+	<h2 id="logo" style="float:left; position: relative;z-index: 1; font-size:50px;">Angellica</h2>
+	<h2 id="logodesc" style="top: 21.5%;position:absolute;font-size:25px;">Future Animation Technical Director & Software Dev</h2>
+	<hr>
+	<h2 id="logodesc" style="top: 28%;position:absolute;font-size:20px;">I've always found the world of technology inspiring.<br>But what is more inspiring, is the opportunity to make a difference.<br>Let's work together to make a positive impact.</h2>
+
+	<h2 id="logodesc" style="top: 50%;position:absolute;font-size:30px;">SITE UNDER CONSTRUCTION</h2>
+
+	<img class="cur" src="/cursor.png"/>
+</div>
+
+
+
+
+
+<!--<script>
+var LogoWords="DEVELOPER";
+var DescWords="Angellica's Programming Portfolio"
+var i = 0;
+function typeWords(){
+if (i < DescWords.length ){
+	document.getElementById("logo").innerHTML += LogoWords.charAt(i);
+	//document.getElementById("logodesc").innerHTML += DescWords.charAt(i);
+	i++;
+	setTimeout(typeWords, 100);
+}
+}
+
+window.typeWords();
+</script>-->
+
+
 
 </body>
 </html>
